JOTM-02/10/2018 Cambios de punto de venta
* Ventana de búsqueda cliente
* Ventana de listado de existencia

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -170,7 +170,14 @@
         <activity
             android:name=".Activity.RegistroClienteActivity"
             android:label="@string/Punto_de_venta" />
-        <activity android:name=".Activity.BuscarClienteActivity"></activity>
+        <activity
+            android:name=".Activity.BuscarClienteActivity"
+            android:label="@string/Punto_de_venta" />
+        <activity
+            android:name=".Activity.VentaGasActivity"
+            android:label="@string/Punto_de_venta" />
+        <activity android:name=".Activity.PuntoVentaGasListaActivity"
+            android:label="@string/Punto_de_venta"/>
     </application>
 
 </manifest>
