KSH-03/10/2018 Se integra el ensamblado System.Web.Http.Owin
Se integra el ensamblado, por conflictos en las versiones locales de todos.

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule.Tests/DS.MainModule.Tests.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule.Tests/DS.MainModule.Tests.csproj
@@ -54,7 +54,10 @@
       <HintPath>..\..\..\..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Http">
-      <HintPath>..\DS.MainModule\bin\System.Web.Http.dll</HintPath>
+      <HintPath>..\..\..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.Owin">
+      <HintPath>..\..\..\..\packages\Microsoft.AspNet.WebApi.Owin.5.2.3\lib\net45\System.Web.Http.Owin.dll</HintPath>
     </Reference>
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
