--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -242,6 +242,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CajaGeneralController.cs" />
     <Compile Include="Controllers\CentroCostoController.cs" />
     <Compile Include="Controllers\CuentaContableController.cs" />
     <Compile Include="Controllers\ClientesController.cs" />
@@ -350,6 +351,7 @@
     <Compile Include="Models\Seguridad\RespuestaAutenticacionDto.cs" />
     <Compile Include="Models\Seguridad\RespuestaDTO.cs" />
     <Compile Include="Models\Catalogos\UnidadMedidaDTO.cs" />
+    <Compile Include="Models\Ventas\CajaGeneralModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -11441,6 +11443,8 @@
     <Content Include="Views\PrecioVenta\EditarPrecioVenta.cshtml" />
     <Content Include="Views\PrecioVentaOtro\Index.cshtml" />
     <Content Include="Views\PrecioVentaOtro\EditarPrecioVentaOtro.cshtml" />
+    <Content Include="Views\CajaGeneral\Index.cshtml" />
+    <Content Include="Views\CajaGeneral\Liquidar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
