--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -176,7 +176,10 @@
         <activity
             android:name=".Activity.VentaGasActivity"
             android:label="@string/Punto_de_venta" />
-        <activity android:name=".Activity.PuntoVentaGasListaActivity"
+        <activity
+            android:name=".Activity.PuntoVentaGasListaActivity"
+            android:label="@string/Punto_de_venta" />
+        <activity android:name=".Activity.PuntoVentaPagarActivity"
             android:label="@string/Punto_de_venta"/>
     </application>
 
