--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -73,6 +73,7 @@
     <Compile Include="AdaptadoresDTO\Catalogo\UnidadAlmacenAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\RegimenAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\ClienteAdapter.cs" />
+    <Compile Include="AdaptadoresDTO\Mobile\ReporteAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\TipoPersonaAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Mobile\TipoRegimenAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Seguridad\RolAdapter.cs" />
@@ -163,7 +164,10 @@
     <Compile Include="DTOs\Mobile\LecturaCamionetaDTO.cs" />
     <Compile Include="DTOs\Mobile\LecturaDTO.cs" />
     <Compile Include="DTOs\Mobile\LoginFbDTO.cs" />
+    <Compile Include="DTOs\Mobile\OtrasVentasDto.cs" />
     <Compile Include="DTOs\Mobile\RecargaDTO.cs" />
+    <Compile Include="DTOs\Mobile\ReporteDiaDTO.cs" />
+    <Compile Include="DTOs\Mobile\TanquesDto.cs" />
     <Compile Include="Servicios\Almacen\CalcularAlmacenServicio.cs" />
     <Compile Include="DTOs\Mobile\TipoPersonaDto.cs" />
     <Compile Include="DTOs\Mobile\TipoRegimenFiscalDto.cs" />
