JSA-04//10/2018 Avance complemento gas

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
@@ -271,6 +271,12 @@
     <Content Include="Imagenes\Inventario\imagenes.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Imagenes\Inventario\Imagen_5_1_Magnatel_Inicial.jpeg" />
+    <Content Include="Imagenes\Inventario\Imagen_5_2_Magnatel_Inicial.jpeg" />
+    <Content Include="Imagenes\Inventario\Imagen_5_3_Magnatel_Inicial.jpeg" />
+    <Content Include="Imagenes\Inventario\Imagen_5_4_Magnatel_Inicial.jpeg" />
+    <Content Include="Imagenes\Inventario\Imagen_5_5_Magnatel_Inicial.jpeg" />
+    <Content Include="Imagenes\Inventario\Imagen_5_6_Magnatel_Inicial.jpeg" />
     <Content Include="Imagenes\Pagos\imagenes.txt" />
     <Content Include="PlantillasHtml\OrdenCompraNueva.html" />
     <Content Include="PlantillasHtml\RequisicionNueva.html">
