--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -48,6 +48,7 @@
     <add key="GetListaEquiposTransporte" value="api/catalogos/consulta/equipotransporte" />
     <add key="GetListaBancos" value="api/catalogos/consulta/bancos" />
     <add key="GetListaFormasPago" value="api/catalogos/consulta/formaspago" />
+    
     <add key="GetPuntosVenta" value="api/catalogos/puntoventa/listapuntosventa" />
     <add key="GetPuntosVentaId" value="api/catalogos/puntoventa/listapuntosventa/" />
     <add key="PutEliminaPuntosVenta" value="api/catalogos/elimina/puntoventa" />
@@ -65,6 +66,7 @@
     <add key="PutEliminarEmpresa" value="api/catalogos/elimina/empresa/" /> 
     <add key="GetTiposPersona" value="api/catalogos/clientes/tipopersona" />
     <add key="GetRegimenFiscal" value="api/catalogos/clientes/regimenfiscal" />
+    
     <add key="GetListaClientes" value="api/catalogos/clientes/listaclientes/" />
     <add key="GetClientes" value="api/catalogos/clientes/listaclientes" />
     <add key="PostRegistraClientes" value="api/catalogos/registra/cliente" />
@@ -143,9 +145,10 @@
     <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/" />
     <add key="GetOrdenCompraEstatus" value="api/compras/buscar/ordenescompra/estatus" />
 
+    <add key="GetOrdenCompraComplementoGas" value="api/compras/buscar/ordencompra/complemento/gas/" />
     <add key="PutConfirmarPago" value="api/compras/guardar/confirmacionpago" />
     <add key="PostGenerarPago" value="api/compras/guardar/pago" />
-    <add key="GetListaPagos" value="api/compras/buscar/pagos/" />    
+    <add key="GetListaPagos" value="api/compras/buscar/pagos/" />        
     <!--Compras-->
     
     <!-- Almacen -->
