JOTM-04/10/2018- Punto venta otros
* Agrega imprimir tiket
* Agrega pagar venta
* Agrega vista de otros

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -175,12 +175,23 @@
             android:label="@string/Punto_de_venta" />
         <activity
             android:name=".Activity.VentaGasActivity"
-            android:label="@string/Punto_de_venta" />
+            android:configChanges="orientation"
+            android:label="@string/Punto_de_venta"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Activity.PuntoVentaGasListaActivity"
-            android:label="@string/Punto_de_venta" />
-        <activity android:name=".Activity.PuntoVentaPagarActivity"
-            android:label="@string/Punto_de_venta"/>
+            android:configChanges="orientation"
+            android:label="@string/Punto_de_venta"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Activity.PuntoVentaPagarActivity"
+            android:configChanges="orientation"
+            android:label="@string/Punto_de_venta"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Activity.PuntoVentaOtrosActivity"
+            android:configChanges="orientation"
+            android:label="@string/Punto_de_venta"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
