CJAL-05/10/2018. Se finaliza con las vistas del modulo Caja general, asi como pequeñas correciones de los modulos anteriores.

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11447,6 +11447,8 @@
     <Content Include="Views\PrecioVentaOtro\EditarPrecioVentaOtro.cshtml" />
     <Content Include="Views\CajaGeneral\Index.cshtml" />
     <Content Include="Views\CajaGeneral\Liquidar.cshtml" />
+    <Content Include="Views\CajaGeneral\Estacion.cshtml" />
+    <Content Include="Views\CajaGeneral\Pipa.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
