KSH-05/10/2018 Cálculo de los movimientos de inventario.
Se queda actualizando el cálculo del inventario.

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -67,6 +67,12 @@
     <Compile Include="Entidades\AlmacenGasDescargaFoto.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\AlmacenGasMovimiento.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\AlmacenGasMovimientoFoto.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\AlmacenGasRecarga.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
