--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -10686,14 +10686,10 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Resources\css\CreateForm.css" />
+    <Content Include="Resources\js\lib\Events.js" />
     <Content Include="Resources\js\lib\jquery-1.9.1.js" />
-    <Content Include="Resources\js\shared\jCatalogo.js" />
-    <Content Include="Resources\js\shared\jLayout.js" />
-    <Content Include="Resources\js\shared\jServices.js" />
-    <Content Include="Resources\js\shared\jUserSearcher.js" />
-    <Content Include="Resources\js\shared\jUtils.js" />
-    <Content Include="Resources\js\shared\jValidator.js" />
-    <Content Include="Resources\js\shared\TreeView.js" />
+    <Content Include="Resources\js\Roles.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
