--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -55,6 +55,7 @@
 
     <!--Asuntos-->
     <add key="Asunto_RequisicionRevisarExistencia" value="Nueva requisición {0}" />
+    <add key="Asunto_SolicitudPago" value="Nueva solicitud de pago {0}" />
     <!--CORREOS ELECTRÓNICOS-->
 
     <!--MOBILE-->
