01/10/2018-Registro-cliente:Inicio servicio punto de venta
* InIcio del servicio de punto de venta

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -1,139 +1,143 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación de ASP.NET, visite
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <appSettings>
-    <add key="GuardarLogoEmpresa" value="~/LogosEmpresa" />
+    <add key="GuardarLogoEmpresa" value="~/LogosEmpresa"/>
     
-    <add key="WebApiUrlBase" value="http://localhost:5469/" />
+    <add key="WebApiUrlBase" value="http://localhost:5469/"/>
     <!--Login-->
-    <add key="PostLogin" value="api/seguridad/login" />
+    <add key="PostLogin" value="api/seguridad/login"/>
     <!--Login-->
 
     <!--Compras-->
-    <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
-    <add key="GetBuscarReq" value="api/compras/buscar/requisicion/" />
-    <add key="PostGenerarOrdenesCompra" value="api/compras/guardar/ordencompra" />
-    <add key="PutCancelarOrdenCompra" value="api/compras/cancelar/ordencompra" />
-    <add key="PutAutorizarCompra" value="api/compras/autoroizar/ordencompra" />
-    <add key="GetOrdenesCompra" value="api/compras/buscar/ordenescompra/" />
-    <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/" />
-    <add key="GetOrdenCompraEstatus" value="api/compras/buscar/ordenescompra/estatus" />   
+    <add key="PostCompraGas" value="api/compras/gas/PostCompraGas"/>
+    <add key="GetBuscarReq" value="api/compras/buscar/requisicion/"/>
+    <add key="PostGenerarOrdenesCompra" value="api/compras/guardar/ordencompra"/>
+    <add key="PutCancelarOrdenCompra" value="api/compras/cancelar/ordencompra"/>
+    <add key="PutAutorizarCompra" value="api/compras/autoroizar/ordencompra"/>
+    <add key="GetOrdenesCompra" value="api/compras/buscar/ordenescompra/"/>
+    <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/"/>
+    <add key="GetOrdenCompraEstatus" value="api/compras/buscar/ordenescompra/estatus"/>   
     <!--Compras-->
 
     <!--Catalogos-->
-    <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin" />
-    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
-    <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/" />
-    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
-    <add key="GetListaProductos" value="api/catalogos/productos/listaproductos/" />
-    <add key="GetListaProductosAsociados" value="api/catalogos/productos/listaproductosasociados/" />
-    <add key="GetListaPaises" value="api/catalogos/paises" />
+    <add key="GetListaEmpresasLogin" value="api/catalogos/empresas/listaempresaslogin"/>
+    <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa"/>
+    <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/"/>
+    <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/"/>
+    <add key="GetListaProductos" value="api/catalogos/productos/listaproductos/"/>
+    <add key="GetListaProductosAsociados" value="api/catalogos/productos/listaproductosasociados/"/>
+    <add key="GetListaPaises" value="api/catalogos/paises"/>
 
-    <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores" />
-    <add key="GetListaProveedoresIdProveedor" value="api/catalogos/consulta/proveedores/" />
-    <add key="PostRegistraProveedor" value="api/catalogos/registra/proveedor" />
-    <add key="PutModificaProveedor" value="api/catalogos/consulta/proveedores" />
-    <add key="PutEliminaProveedor" value="api/catalogos/consulta/proveedores" />
+    <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores"/>
+    <add key="GetListaProveedoresIdProveedor" value="api/catalogos/consulta/proveedores/"/>
+    <add key="PostRegistraProveedor" value="api/catalogos/registra/proveedor"/>
+    <add key="PutModificaProveedor" value="api/catalogos/consulta/proveedores"/>
+    <add key="PutEliminaProveedor" value="api/catalogos/consulta/proveedores"/>
 
-    <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
-    <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo" />
-    <add key="PutModificaCentroCosto" value="api/catalogos/modifica/centro/costo" />
-    <add key="PutEliminaCentroCosto" value="api/catalogos/elimina/centro/costo" />
-    <add key="GetCentroCosto" value="api/catalogos/centro/costo/" />
+    <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto"/>
+    <add key="PostRegistraCentroCosto" value="api/catalogos/registra/centro/costo"/>
+    <add key="PutModificaCentroCosto" value="api/catalogos/modifica/centro/costo"/>
+    <add key="PutEliminaCentroCosto" value="api/catalogos/elimina/centro/costo"/>
+    <add key="GetCentroCosto" value="api/catalogos/centro/costo/"/>
 
-    <add key="PostRegistraCuentaContable" value="api/catalogos/registra/cuenta/contable" />
-    <add key="PutModificaCuentaContable" value="api/catalogos/modifica/cuenta/contable" />
-    <add key="PutEliminaCuentaContable" value="api/catalogos/elimina/cuenta/contable" />
-    <add key="GetListaCuentasContables" value="api/catalogos/consulta/cuentas/contables/" />
-    <add key="GetCuentaContable" value="api/catalogos/consulta/cuenta/contable/" />
+    <add key="PostRegistraCuentaContable" value="api/catalogos/registra/cuenta/contable"/>
+    <add key="PutModificaCuentaContable" value="api/catalogos/modifica/cuenta/contable"/>
+    <add key="PutEliminaCuentaContable" value="api/catalogos/elimina/cuenta/contable"/>
+    <add key="GetListaCuentasContables" value="api/catalogos/consulta/cuentas/contables/"/>
+    <add key="GetCuentaContable" value="api/catalogos/consulta/cuenta/contable/"/>
     <!--Catalogos-->
 
     <!--Requisicion-->
-    <add key="PostRequisicion" value="api/requisicion/guardar/requisicion" />
-    <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/" />
-    <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/" />
-    <add key="GetRequisicionByNumRequisicionAut" value="api/requisicion/buscar/requisicion/autorizacion/" />
-    <add key="PutActulizarRevision" value="api/requisicion/update/requisicion/revision" />
-    <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion" />
-    <add key="PutCancelarRequisicion" value="api/requisicion/cancela/requisicion" />
+    <add key="PostRequisicion" value="api/requisicion/guardar/requisicion"/>
+    <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/"/>
+    <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/"/>
+    <add key="GetRequisicionByNumRequisicionAut" value="api/requisicion/buscar/requisicion/autorizacion/"/>
+    <add key="PutActulizarRevision" value="api/requisicion/update/requisicion/revision"/>
+    <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion"/>
+    <add key="PutCancelarRequisicion" value="api/requisicion/cancela/requisicion"/>
     <!--Requisicion-->
 
     <!--Inventario-->
-    <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
+    <add key="PostGuardarEntradas" value="api/almacen/entrada/producto"/>
     <!--Inventario-->
 
     <!--Para el funcionamiento del token-->
-    <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
-    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
-    <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
-    <add key="JWT_EXPIRE_MINUTES" value="30" />
+    <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO"/>
+    <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469"/>
+    <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469"/>
+    <add key="JWT_EXPIRE_MINUTES" value="30"/>
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2"/>
+    <httpRuntime targetFramework="4.5.2"/>
     <pages>
       <namespaces>
-        <add namespace="System.Web.Optimization" />
+        <add namespace="System.Web.Optimization"/>
       </namespaces>
       <controls>
-        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
       </controls>
     </pages>
     <httpModules>
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web"/>
     </httpModules>
-    <globalization uiCulture="es" culture="es-MX" />
+    <globalization uiCulture="es" culture="es-MX"/>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Http" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+				<bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0"/>
+			</dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed"/>
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <assemblyIdentity name="WebGrease" culture="neutral" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>  
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <modules>
-      <remove name="ApplicationInsightsWebTracking" />
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      <remove name="ApplicationInsightsWebTracking"/>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler"/>
     </modules>
   </system.webServer>
 </configuration>
