KSH-09/10/2018 Se agregan las referencias a los nuevos archivos.

--- a/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
+++ b/1.Layers/1.4Domain/1.4.2SagasMainModule/Sagas.MainModule/Sagas.MainModule.csproj
@@ -121,6 +121,9 @@
     <Compile Include="Entidades\ClienteLocacion.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\CTipoMovimiento.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\CuentaContable.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
@@ -187,6 +190,9 @@
     <Compile Include="Entidades\RegimenFiscal.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entidades\ReporteDelDia.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entidades\Requisicion.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
@@ -246,6 +252,21 @@
     </Compile>
     <Compile Include="Entidades\UsuarioPartial.cs" />
     <Compile Include="Entidades\UsuarioRol.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\VentaCajaGeneral.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\VentaCorteAnticipoEC.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\VentaMovimiento.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\VentaPuntoDeVenta.cs">
+      <DependentUpon>Sagas.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entidades\VentaPuntoDeVentaDetalle.cs">
       <DependentUpon>Sagas.tt</DependentUpon>
     </Compile>
     <Compile Include="IRepositorios\IEmpresaRepositorio.cs" />
