--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -152,6 +152,11 @@
     <add key="PostGuardarEntradas" value="api/almacen/entrada/producto" />
     <add key="GetOrdenCompraEntrada" value="api/almacen/buscar/ordecompraentrada/" />
     <!-- Almacen -->
+    
+    <!-- Ventas -->
+    <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
+    <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
+    <!-- Ventas -->
   </appSettings>
   <system.web>
     <pages>
