--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11339,7 +11339,10 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\js\ConfirmacionPagoJS.js" />
+    <Content Include="Scripts\js\CProductoJS.js" />
     <Content Include="Scripts\js\OrdenCompraComplementoGasJS.js" />
+    <Content Include="Scripts\js\OrdenesJS.js" />
+    <Content Include="Scripts\js\RequisicionesJS.js" />
     <Content Include="Scripts\js\UtileriasJS.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\moment-with-locales.js" />
