--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -141,7 +141,7 @@
     <add key="GetBuscarReq" value="api/compras/buscar/requisicion/" />
     <add key="PostGenerarOrdenesCompra" value="api/compras/guardar/ordencompra" />
     <add key="PutCancelarOrdenCompra" value="api/compras/cancelar/ordencompra" />
-    <add key="PutAutorizaCompra" value="api/compras/autoroizar/ordencompra" />
+    <add key="PutAutorizarCompra" value="api/compras/autorizar/ordencompra" />
     <add key="PutDatosFactura" value="api/compras/actualiza/ordencompra/datosfactura" />
     <add key="GetOrdenesCompra" value="api/compras/buscar/ordenescompra/" />
     <add key="GetBuscarOrdenCompra" value="api/compras/buscar/ordencompra/" />
