CJAL-11/10/2018- avance modulo caja general.

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -156,6 +156,7 @@
     <!-- Ventas -->
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
     <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
+    <add key="GetListaCajaGralCamioneta" value="api/ventas/buscar/listacajageneralcamioneta/" />
     <!-- Ventas -->
   </appSettings>
   <system.web>
