--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -71,6 +71,7 @@
     <Compile Include="DTOs\Almacen\AplicaCalibracionDto.cs" />
     <Compile Include="DTOs\Almacen\AplicaTomaLecturaDto.cs" />
     <Compile Include="DTOs\Almacen\AplicaTraspasoDto.cs" />
+    <Compile Include="DTOs\Almacen\InventarioAnteriorDto.cs" />
     <Compile Include="DTOs\Catalogo\PrecioVentaEstatusDTO.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\PrecioVentaGasAdapter.cs" />
     <Compile Include="AdaptadoresDTO\Catalogo\ProductoAdapter.cs" />
