JSA-12/10/2018-Correcciones de flujo

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11340,8 +11340,10 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\js\CentroCostoJS.js" />
     <Content Include="Scripts\js\ConfirmacionPagoJS.js" />
     <Content Include="Scripts\js\CProductoJS.js" />
+    <Content Include="Scripts\js\CuentasContablesJS.js" />
     <Content Include="Scripts\js\OrdenCompraComplementoGasJS.js" />
     <Content Include="Scripts\js\OrdenesJS.js" />
     <Content Include="Scripts\js\RequisicionesJS.js" />
