--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/MVC.Presentacion.csproj
@@ -11346,7 +11346,9 @@
     <Content Include="Scripts\js\CuentasContablesJS.js" />
     <Content Include="Scripts\js\OrdenCompraComplementoGasJS.js" />
     <Content Include="Scripts\js\OrdenesJS.js" />
+    <Content Include="Scripts\js\RequisicionAutorizacionJS.js" />
     <Content Include="Scripts\js\RequisicionesJS.js" />
+    <Content Include="Scripts\js\RequisicionJS.js" />
     <Content Include="Scripts\js\UtileriasJS.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\moment-with-locales.js" />
