CJAL-12/10/2018- Se agrega mensages de validacion exitosos y avance al modulo caja general

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Web.config
@@ -157,6 +157,7 @@
     <add key="GetListaCajaGral" value="api/ventas/buscar/listacajageneral" />
     <add key="GetListaCajaGralId" value="api/ventas/buscar/listacajageneral/" />
     <add key="GetListaCajaGralCamioneta" value="api/ventas/buscar/listacajageneralcamioneta/" />
+    <add key="GetListaCajaGralEstacion" value="api/ventas/buscar/listacajageneralestacion/" />
     <!-- Ventas -->
   </appSettings>
   <system.web>
